Fixed span spacing

--- a/MyLC.css
+++ b/MyLC.css
@@ -157,11 +157,15 @@ header .hide-completed {
   max-height: 100%;
 }
 .thumb {
-  width: 100px;
-  height: auto;
+  width: 60px;
+  max-height: 60px;
 }
 .inline {
   display: inline-block;
+  border: 0px;
+  margin: 0 0 0 0;
+  height: 60px;
+  width: 60px;
 }
 .sortableitems {
 }
